; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_free_mem.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_peer.c_peer_free_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@peer_mem = common dso_local global i32* null, align 8
@peer_svc_mem = common dso_local global i32* null, align 8
@peer_chr_mem = common dso_local global i32* null, align 8
@peer_dsc_mem = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @peer_free_mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @peer_free_mem() #0 {
  %1 = load i32*, i32** @peer_mem, align 8
  %2 = call i32 @free(i32* %1)
  store i32* null, i32** @peer_mem, align 8
  %3 = load i32*, i32** @peer_svc_mem, align 8
  %4 = call i32 @free(i32* %3)
  store i32* null, i32** @peer_svc_mem, align 8
  %5 = load i32*, i32** @peer_chr_mem, align 8
  %6 = call i32 @free(i32* %5)
  store i32* null, i32** @peer_chr_mem, align 8
  %7 = load i32*, i32** @peer_dsc_mem, align 8
  %8 = call i32 @free(i32* %7)
  store i32* null, i32** @peer_dsc_mem, align 8
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
